Goomp page so much spacing fix #50

--- a/app/assets/stylesheets/_app.sass
+++ b/app/assets/stylesheets/_app.sass
@@ -10,7 +10,7 @@
 
 .site-container
   width: $main-content-width + 2 * $sidebar-width + 40px
-  margin: 78px auto 0 auto
+  margin: 50px auto 0 auto
 
   .main
     .ui.segment
@@ -238,3 +238,7 @@
 
 .ui.cards > .card > .image > img, .ui.card > .image > img
   height: 130px
+
+.new_post
+  .ui.segment.feed
+    margin-bottom: 30px
